Fix wrapping for triple column layout

--- a/project4/styles.css
+++ b/project4/styles.css
@@ -5,24 +5,25 @@ body {
     background-repeat: repeat;
 }
 
-.sect {
+.main-container {
     display: flex;
     flex-flow: row wrap;
+    align-content: stretch;
 
     justify-content: center;
 
-    width: 100%;
+    width: fit-content;
     margin: auto;
 }
 
 .main {
+    flex-grow: 3;
     color: white;
 
     background-color: #0f0f0f;
 
-    margin: 0px 4px;
+    margin: 4px;
 
-    width: 50%;
     height: 100%;
 
     border: 1px solid gray;
@@ -32,6 +33,8 @@ body {
 }
 
 .side-bar {
+    max-width: 100%;
+    flex-grow: 1;
     width: 15%;
     height:100%;
 }
